<resources>
    <style name="loading">Loading</style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">CoronavirusTrackerApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="network_not_available">Network not available</string>
    <string name="how_it_spreads">Coronavirus disease spreads primarily through contact with an infected person when they cough or sneeze. It also spreads when a person touches a surface or object that has the virus on it, then touches their eyes, nose, or mouth.</string>
    <string name="symptoms">People may be sick with the virus for 1 to 14 days before developing symptoms. The most common symptoms of coronavirus disease (COVID-19) are fever, tiredness, and dry cough. Most people (about 80%) recover from the disease without needing special treatment.</string>
    <string name="do_s">1. Wash your hands regularly for 20 seconds, with soap and water or alcohol-based hand rub.
        \n2. Cover your nose and mouth with a disposable tissue or flexed elbow when you cough or sneeze.
        \n3. Avoid close contact (1 meter or 3 feet) with people who are unwell.
        \n4. Stay home and self-isolate from others in the household if you feel unwell.
</string>
    <string name="dont_s">1. Touch your eyes, nose, or mouth if your hands are not clean
    \n2. Do not travel unless necessary.
    \n3. Do not take antibiotics.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="treatments">Self-care
        \n1. There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to help them breathe.
        \n2. If you have mild symptoms, stay at home until you’ve recovered.
        \n3. You can relieve your symptoms if you:
            \n - rest and sleep
            \n - keep warm
            \n - drink plenty of liquids
            \n - use a room humidifier or take a hot shower to help ease a sore throat and cough
    \n\4. Medical treatments
    \n If you develop a fever, cough, and have difficulty breathing, promptly seek medical care. Call in advance and tell your health provider of any recent travel or recent contact with travelers.</string>

    <string name="faqs"><b>1. What is Coronavirus?</b>
    \nCoronaviruses are a large family of viruses which may cause illness in animals or humans.  In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19.
    \n
        \n<b>2. What is COVID-19?</b>
    \nCOVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.
    \n
        \n<b>3. What are the symptoms of COVID-19?</b>
    \nThe most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become infected but don’t develop any symptoms and don\'t feel unwell. Most people (about 80%) recover from the disease without needing special treatment. Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people, and those with underlying medical problems like high blood pressure, heart problems or diabetes, are more likely to develop serious illness. People with fever, cough and difficulty breathing should seek medical attention.
    \n
        \n<b>4. How does COVID-19 spread?</b>
    \nPeople can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick. WHO is assessing ongoing research on the ways COVID-19 is spread and will continue to share updated findings.
    \n
        \n<b>5. Can the virus that causes COVID-19 be transmitted through the air?</b>
    \nStudies to date suggest that the virus that causes COVID-19 is mainly transmitted through contact with respiratory droplets rather than through the air.
    \n
        \n<b>6. Can CoVID-19 be caught from a person who has no symptoms?</b>
    \nThe main way the disease spreads is through respiratory droplets expelled by someone who is coughing. The risk of catching COVID-19 from someone with no symptoms at all is very low. However, many people with COVID-19 experience only mild symptoms. This is particularly true at the early stages of the disease. It is therefore possible to catch COVID-19 from someone who has, for example, just a mild cough and does not feel ill.  WHO is assessing ongoing research on the period of transmission of COVID-19 and will continue to share updated findings.
    \n
        \n<b>7. How long is the Incubation period for COVID-19</b>
    \nThe “incubation period” means the time between catching the virus and beginning to have symptoms of the disease. Most estimates of the incubation period for COVID-19 range from 1-14 days, most commonly around five days. These estimates will be updated as more data become available.
    \n
        \n<b>8. How long does the virus survive on surfaces?</b>
        \nIt is not certain how long the virus that causes COVID-19 survives on surfaces, but it seems to behave like other coronaviruses. Studies suggest that coronaviruses (including preliminary information on the COVID-19 virus) may persist on surfaces for a few hours or up to several days. This may vary under different conditions (e.g. type of surface, temperature or humidity of the environment).

\nIf you think a surface may be infected, clean it with simple disinfectant to kill the virus and protect yourself and others. Clean your hands with an alcohol-based hand rub or wash them with soap and water. Avoid touching your eyes, mouth, or nose.
        \n
        \n<b>9. Is the source of the coronavirus causing COVID-19 known?</b>
        \nCurrently, the source of SARS-CoV-2, the coronavirus (CoV) causing COVID-19 is unknown. All available evidence suggests that SARS-CoV-2 has a natural animal origin and is not a constructed virus. SARS-CoV-2 virus most probably has its ecological reservoir in bats. SARS-CoV-2, belongs to a group of genetically related viruses, which also include SARS-CoV and a number of other CoVs isolated from bats populations. MERS-CoV also belongs to this group, but is less closely related.
        \n
        \n<b>10. Is COVID-19 airborne?</b>
        \nThe virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or speaks. These droplets are too heavy to hang in the air. They quickly fall on floors or surfaces. You can be infected by breathing in the virus if you are within 1 metre of a person who has COVID-19, or by touching a contaminated surface and then touching your eyes, nose or mouth before washing your hands.

    </string>

    //Names of Indian States
    <string name="protection_measures">Stay aware of the latest information on the COVID-19 outbreak, available on the WHO website and through your national and local public health authority. Many countries around the world have seen cases of COVID-19 and several have seen outbreaks. Authorities in China and some other countries have succeeded in slowing or stopping their outbreaks. However, the situation is unpredictable so check regularly for the latest news.
    \nYou can reduce your chances of being infected or spreading COVID-19 by taking some simple precautions:
        \n
    \n1. Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.
        \nWhy? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.
        \n
    \n2. Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or sneezing.
        \nWhy? When someone coughs or sneezes they spray small liquid droplets from their nose or mouth which may contain virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person coughing has the disease.
        \n
    \n3. Avoid touching eyes, nose and mouth.
\nWhy? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.
        \n
    \n4. Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.
        \nWhy? Droplets spread virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.
        \n
        \n5. Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.
\nWhy? National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections.
        \n
        \n6. Keep up to date on the latest COVID-19 hotspots (cities or local areas where COVID-19 is spreading widely). If possible, avoid traveling to places  – especially if you are an older person or have diabetes, heart or lung disease.
\nWhy? You have a higher chance of catching COVID-19 in one of these areas.

    </string>
    <string name="delhi">Delhi</string>
    <string name="andaman">Andaman and Nicobar Islands</string>
    <string name="andhra">Andhra Pradesh</string>
    <string name="bihar">Bihar</string>
    <string name="chandigarh">Chandigarh</string>
    <string name="chhattisgarh">Chhattisgarh</string>
    <string name="goa">Goa</string>
    <string name="gujarat">Gujarat</string>
    <string name="haryana">Haryana</string>
    <string name="himachal">Himachal Pradesh</string>
    <string name="jammu">Jammu and Kashmir</string>
    <string name="karnataka">Karnataka</string>
    <string name="kerala">Kerala</string>
    <string name="ladakh">Ladakh</string>
    <string name="mp">Madhya Pradesh</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="manipur">Manipur</string>
    <string name="mizoram">Mizoram</string>
    <string name="odisha">Odisha</string>
    <string name="puducherry">Puducherry</string>
    <string name="punjab">Punjab</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="tamilnadu">Tamil Nadu</string>
    <string name="telangana">Telengana</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="up">Uttar Pradesh</string>
    <string name="wb">West Bengal</string>

    <string name="alert_dialog_ok_label">ok</string>
</resources>
