<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        tools:context=".AboutFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textColor="@color/white"
                    android:text="WHO GUIDELINES"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="How it spreads?"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/how_it_spreads"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="Symptoms"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/symptoms"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:text="Do's:"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-black"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_checkmark"
                        android:baselineAlignBottom="false"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/do_s"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:text="Dont's:"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-black"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_dont"
                        android:baselineAlignBottom="false"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/dont_s"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="Treatments"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/treatments"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="Protection measures for everyone"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/protection_measures"
                    android:textStyle="normal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp"/>
            </LinearLayout>

    </ScrollView>
